viewport issue on mobile fix using dvh instead of vh

--- a/app/components/HeroSection.module.css
+++ b/app/components/HeroSection.module.css
@@ -6,7 +6,7 @@
     background-image: url("/main.jpg");
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    height: 100dvh;
     width: 100%;
 }
 .content {
